@@ -1,7 +1,7 @@
 package uk.gov.hmcts.reform.sscs.functional.evidenceshare;
 
 import static java.util.Collections.singletonList;
-import static org.junit.Assert.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.springframework.http.MediaType.APPLICATION_PDF;
 import static uk.gov.hmcts.reform.sscs.ccd.domain.EventType.*;
 
@@ -11,7 +11,7 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.time.LocalDate;
 import java.util.Objects;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import uk.gov.hmcts.reform.document.domain.UploadResponse;
 import uk.gov.hmcts.reform.sscs.ccd.domain.SscsCaseDetails;
@@ -19,20 +19,21 @@ import uk.gov.hmcts.reform.sscs.ccd.domain.State;
 import uk.gov.hmcts.reform.sscs.domain.pdf.ByteArrayMultipartFile;
 import uk.gov.hmcts.reform.sscs.service.EvidenceManagementService;
 
-public class DwpUploadFunctionalTest extends AbstractFunctionalTest {
+class DwpUploadFunctionalTest extends AbstractFunctionalTest {
     private static final String EVIDENCE_DOCUMENT_PDF = "evidence-document.pdf";
     @Autowired
     private EvidenceManagementService evidenceManagementService;
 
-    public DwpUploadFunctionalTest() {
+    DwpUploadFunctionalTest() {
         super();
     }
 
     // Need tribunals running to pass this functional test
     @Test
-    public void dwpUploadResponseEventSendsToReadyToList() throws IOException {
+    void dwpUploadResponseEventSendsToReadyToList() throws IOException {
 
-        SscsCaseDetails createdCase = createCaseWithState(CREATE_TEST_CASE, "UC", "Universal Credit", State.READY_TO_LIST.getId());
+        SscsCaseDetails createdCase = createCaseWithState(CREATE_TEST_CASE, "UC", "Universal Credit",
+            State.READY_TO_LIST.getId());
 
         //Get case into correct state without triggering any callbacks that cause race conditions
         updateCaseEvent(SEND_TO_DWP_OFFLINE, createdCase);
@@ -70,8 +71,7 @@ public class DwpUploadFunctionalTest extends AbstractFunctionalTest {
 
         UploadResponse upload = evidenceManagementService.upload(singletonList(file), "sscs");
 
-        return upload.getEmbedded().getDocuments().get(0).links.self.href;
+        return upload.getEmbedded().getDocuments().getFirst().links.self.href;
     }
-
 
 }
